--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,16 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+button {
+  border: 0;
+  border-radius: 8px;
+  padding: 8px 32px;
+  font-size: 18px;
+  font-weight: 900;
+  color: #f9faf8;
+  background-color: #3882f6;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -54,19 +64,9 @@ body {
 }
 
 .hero-sub-text {
+  margin-bottom: 1rem;
   font-size: 18px;
   color: #e5e7eb
-}
-
-.hero-text button {
-  margin-top: .5rem;
-  border: 0;
-  border-radius: 8px;
-  padding: 8px 32px;
-  font-size: 18px;
-  font-weight: 900;
-  color: #f9faf8;
-  background-color: #3882f6;
 }
 
 .hero-image {
@@ -129,4 +129,35 @@ body {
   font-weight: 900;
   text-align: right;
   color: #1f2937
+}
+
+.action-call {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 100px 25vw;
+  border-radius: 15px;
+  padding: 50px 100px;
+  background-color: #3882f6;
+}
+
+.action-call-text {
+  width: 60%;
+}
+
+.action-call-main-text {
+  font-size: 24px;
+  font-weight: 900;
+  color: #f9faf8;
+}
+
+.action-call-sub-text {
+  font-size: 18px;
+  font-weight: 300;
+  color: #e5e7eb;
+}
+
+.action-call button {
+  border: 2px solid #f9faf8;
+  height: 100%;
 }
