--- a/styles.css
+++ b/styles.css
@@ -161,3 +161,11 @@ button {
   border: 2px solid #f9faf8;
   height: 100%;
 }
+
+.footer {
+  padding: 50px 0;
+  text-align: center;
+  font-size: 18px;
+  color: #e5e7eb;
+  background-color: #1f2937;
+}
